--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="button" type="button" onclick="lookup()" >lookup</button>
         <button id="gregoryus" type="button" onclick= "funcGregoryus()">next pokemon</button>
         <p id="idNum"></p>
-        <img id="pokeImg" src="" alt="pokemon">
+        <img id="pokeImg" >
         <ul>
             <li id="move1"></li>
             <li id="move2"></li>
@@ -22,7 +22,7 @@
             <li id="move4"></li>
 
         </ul>
-        <img id="evoImg" src="" alt="evolution">
+        <img id="evoImg" >
     </div>   
 
 
